# Android-VideoPlayer

./: add2line.sh  build.gradle  build_for_android.sh  gradle.properties  readme.md  settings.gradle  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AACUtil.cpp  AACUtil.h  AudioConverter.cpp  AudioConverter.h  AudioFrame.h  AudioParameter.h  BlockRecyclerQueue.cpp  BlockRecyclerQueue.h  CodecState.h  CodecType.h  Constants.h  FFmpegCodec.cpp  FFmpegCodec.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegMuxer.cpp  FFmpegMuxer.h  FFmpegUrlMuxer.cpp  FFmpegUrlMuxer.h  Factory.cpp  Factory.h  Flags.h  HandlerThread.cpp  HandlerThread.h  IAudioFrameProvider.cpp  IAudioFrameProvider.h  IAudioPlayer.cpp  IAudioPlayer.h  ICodec.h  IDecoder.h  IEncoder.h  IMediaDataReceiver.cpp  IMediaDataReceiver.h  IPlayStateListener.cpp  IPlayStateListener.h  IVideoFrameProvider.cpp  IVideoFrameProvider.h  IVideoPlayer.cpp  IVideoPlayer.h  JavaStateListener.cpp  (+40 more)
app/src/main/cpp/FFmpeg/libavcodec/: avcodec.h  bsf.h  codec_id.h  codec_par.h  d3d11va.h  dv_profile.h  dxva2.h  packet.h  qsv.h  vdpau.h  videotoolbox.h
app/src/main/cpp/FFmpeg/libavfilter/: avfilter.h  buffersrc.h
app/src/main/cpp/FFmpeg/libavformat/: avformat.h
app/src/main/cpp/FFmpeg/libavutil/: attributes.h  audio_fifo.h  avutil.h  buffer.h  channel_layout.h  dict.h  downmix_info.h  ffversion.h  file.h  frame.h  hwcontext.h  hwcontext_d3d11va.h  hwcontext_drm.h  hwcontext_mediacodec.h  mem.h  opt.h  samplefmt.h
app/src/main/cpp/FFmpeg/libswresample/: swresample.h
app/src/main/cpp/android_player/audio_player/: OpenSLESPlayer.cpp  OpenSLESPlayer.h
app/src/main/cpp/android_player/video_player/: EGLCore.cpp  OpenGLESPlayer.cpp  OpenGLESPlayer.h  OpenGLESPlayer2.cpp  Render.cpp  (+3 more)
app/src/main/cpp/aom/: aom_codec.h  aom_external_partition.h  aomcx.h
app/src/main/cpp/fdk-aac/: FDK_audio.h  aacdecoder_lib.h  aacenc_lib.h  genericStds.h  syslib_channelMapDescr.h
app/src/main/cpp/h264_analyze/: BitReader.h  BufferBitReader.cpp  BufferBitReader.h  FileBitReader.cpp  FileBitReader.h  HRD.h  NAL.h  PPS.h  SPS.h  VUI.h  h264_nal.cpp  h264_nal.h
app/src/main/cpp/handler/: Handler.h
app/src/main/cpp/iconv/: localcharset.h
app/src/main/cpp/lame/: lame.h
app/src/main/cpp/librtmp/: dh.h  handshake.h  hashswf.c  rtmp.c
app/src/main/cpp/output/: IAudioOutput.h  IVideoOutput.h
app/src/main/cpp/x264/: x264.h  x264_config.h
app/src/main/cpp/x265/: hdr10plus.h  x265.h  x265_config.h
app/src/main/res/layout/: activity_ffmpeg_mux.xml  activity_file_list.xml  activity_main.xml  activity_play.xml  activity_rtmp_push.xml  activity_setting.xml  fragment_set_pull_stream_url.xml  fragment_set_push_stream_url.xml  fragment_set_stream_location.xml  list_item_video.xml
app/src/main/res/values/: strings.xml  styles.xml
(+80 files in other folders)
